tests/ui/concurrent_cached_key_without_convert.stderr
error: `key` requires `convert` to be set
 --> tests/ui/concurrent_cached_key_without_convert.rs:3:1
  |
3 | #[concurrent_cached(map_error = "|e| e", disk = true, key = "String")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `concurrent_cached` (in Nightly builds, run with -Z macro-backtrace for more info)
